Adding all sources

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/tunaegg.html">Tuna and Egg</a>
+    <ul>
+        <li><a href="recipes/tunaegg.html" target="_blank" rel="noopener noreferrer">Tuna and Egg</a></li>
+        <li><a href="recipes/latenightseat.html"target="_blank" rel="noopener noreferrer">Pancit canton</a></li>
+        <li><a href="recipes/chicken.html"target="_blank" rel="noopener noreferrer">Random chicken recipe</a></li>
+    </ul>
 </body>
 </html>
