--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 div class="title1">Odin Recipes</h1>
+    <div><ul>
         <li><a href="recipes/tunaegg.html" target="_blank" rel="noopener noreferrer">Tuna and Egg</a></li>
         <li><a href="recipes/latenightseat.html"target="_blank" rel="noopener noreferrer">Pancit canton</a></li>
         <li><a href="recipes/chicken.html"target="_blank" rel="noopener noreferrer">Random chicken recipe</a></li>
     </ul>
+</div>
 </body>
 </html>
