--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
     <h1>Italian chicken marinade</h1>
     <img src="https://www.allrecipes.com/thmb/vom5-lRLPCHBskR-k4wDau1GMqw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/665982-italian-chicken-marinade-wannabe-chefette-4x3-1-ac0b567c5bd0457e96e6a15317d9ab57.jpg">
     <p1><br>Random recipe because I can only cook 2 things</p1>
-    <h2><strong>Ingredients</strong></h2>
+    <h2 class="headers">Ingredients</h2>
     <ul>
         <li>16 ounce bottle Italian-style salad dressing</li>
         <li>1 teaspoon garlic powder</li>
         <li>1 teaspoon salt</li>
         <li>4 skinless, boneless chicken breast halves</li>
     </ul>
-    <h3><strong>Directions</strong></h3>
+    <h3 class="headers">Directions</h3>
     <ol>
         <li>Whisk salad dressing, garlic powder, and salt together in a shallow baking dish; add chicken breasts and turn to coat. Cover the dish with plastic wrap and marinate in the refrigerator, 4 hours to overnight.</li>
         <li>Preheat an outdoor grill for high heat and lightly oil the grate. </li>
