--- a/recipes/latenightseat.html
+++ b/recipes/latenightseat.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
     <h1>Late night eats</h1>
     <img src="/home/jd/odin-recipes/images/pancit.jpg" width="610" height="410">
     <p1><br>3 AM late night type shi</p1>
-    <h2><strong>Ingredients</strong></h2>
+    <h2 class="headers">Ingredients</h2>
     <ul>
         <li>Instant noodles</li>
         <li>Egg</li>
         <li>Bread</li>
     </ul>
-    <h3><strong>Steps</strong></h3>
+    <h3 class="headers">Steps</h3>
     <ol>
         <li>Boil water</li>
         <li>Put noodles in boiling water</li>
