--- a/recipes/tunaegg.html
+++ b/recipes/tunaegg.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body>
     <h1>Tuna Egg</h1>
     <img src="https://www.allrecipes.com/thmb/-vZvGxF_wQBPEV4xC4jch3FpGL4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/83569-tuna-egg-salad-sandwich-mfs-4-099850f40fd143e79b215b6977a30feb.jpg">
     <p1> <br>It is my favorite sandwich</p1>
-    <h2><strong>Ingredients</strong></h2>
+    <h2 class="headers">Ingredients</h2>
     <ul>
         <li>Tuna</li>
         <li>Egg</li>
         <li>Bread</li>
     </ul>
 
-    <h3><strong>Steps</strong></h3>
+    <h3 class="headers">Steps</h3>
     <ol>
         <li>Strain tuna oil</li>
         <li>Cook tuna chunks</li>
